# quart-clean-architecture

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8724a035936a_create_user_table.py  c3c4b86bff87_create_todo_table.py
src/: server.py
src/apps/todos/: controllers.py  repositories.py  services.py
src/apps/users/: controllers.py  repositories.py  services.py
src/config/: database.py
src/helpers/: decorators.py  middlewares.py
src/todos/: controllers.py  repositories.py  services.py
src/users/: controllers.py  repositories.py  services.py
